Upgraded to java 11 and JUnit5